--- a/src/bbUI.css
+++ b/src/bbUI.css
@@ -2267,13 +2267,14 @@ body, html {
 }
 
 .bb-bb10-dropdown-item-dark  .text-align, 
-.bb-bb10-dropdown-item-dark  .text-align 
+.bb-bb10-dropdown-item-light  .text-align 
 {
 	height: 100%;
 }
 
+
 .bb-bb10-dropdown-item-dark  .text-align, 
-.bb-bb10-dropdown-item-dark  .text-align, 
+.bb-bb10-dropdown-item-light  .text-align, 
 .bb-bb10-dropdown-item-dark  .text-container, 
 .bb-bb10-dropdown-item-light .text-container 
 {
@@ -5898,6 +5899,7 @@ a.bb5-button-highlight span {
 	padding-top: 0px;
 	width: 10px;
 }
+
 
 
 
